[build-system]
requires = [
  "setuptools >= 61",
  "setuptools_scm[toml] >= 8",
]
build-backend = 'setuptools.build_meta'

[project]
name = "NREL-SitingLab"
dynamic = ["version"]
description = "National Renewable Energy Laboratory's (NREL's) Siting Lab Jupyter Notebook tutorials"
readme = "README.md"
authors = [
  {name = "Paul Pinchuk", email = "Pavlo.Pinchuk@nrel.gov"},
  {name = "Anthony Lopez", email = "Anthony.Lopez@nrel.gov"},
  {name = "Travis Williams", email = "Travis.Williams@nrel.gov"},
  {name = "Victor Igwe", email = "Victor.Igwe@nrel.gov"},
]
maintainers = [
  {name = "Paul Pinchuk", email = "Pavlo.Pinchuk@nrel.gov"},
]
license = {text = "BSD-3-Clause"}
keywords = ["NREL", "Siting Lab", "reV", "reVX", "rex", "Supply Curve", "Land-based Wind", "Offshore Wind", " Utility-scale PV"]
requires-python = ">= 3.10"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
]
dependencies = [
  "h5py>=3.11.0",
  "jupyter>=1.0.0",
  "jupyterlab>=4.0",
  "NREL-rex>=0.2.85",
  "NREL-reV>=0.9.4",
  "NREL-reVX>=0.3.60",
  "matplotlib>=3.9.0",
  "numpy~=1.24.4",
  "plotly>=5.24.1",
  "pyproj>=3.6.1",
]

[project.optional-dependencies]
dev = [
  "build>=0.6.0",
  "ruff>=0.4.0",
]
doc = [
  "make>=0.1",
  "jupyter-book>=1.0.2",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.5.0",
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/NREL/SitingLab"

[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
preview = true
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "COM", # flake8-commas
  # "D", # pydocstyle
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "NPY", # numpy-specific
  "Q", # flake8-quotes
  "UP", # pyupgrade
  "W", # Warning
]
ignore = [
  "I001", # unsorted-imports
  "UP009", # utf8-encoding-declaration
  "COM812", # missing-trailing-comma (incompatible with formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
version_file = "_version.py"

[tool.pixi.project]
channels = ["conda-forge", "anaconda", "main"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.system-requirements]
linux = "4.18"

[tool.pixi.pypi-dependencies]
NREL-SitingLab = { path = ".", editable = true }
NREL-rex = ">=0.2.85"
NREL-reV = ">=0.9.4"
NREL-reVX = ">=0.3.60"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "doc", "test"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
build = { cmd = "make book", cwd = "docs"}

[tool.pixi.dependencies]
python = ">=3.10"
h5py = ">=3.11.0"
jupyter = ">=1.0.0"
jupyterlab = ">=4.0"
matplotlib = ">=3.9.0"
numpy= "~=1.24.4"
plotly = ">=5.24.1"
pyproj = ">=3.6.1"

[tool.pixi.feature.dev.dependencies]
build = ">=0.5"
ruff = ">=0.2"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.0"
pytest-cov = ">=3.0"
pytest-xdist = ">=3.0"

[tool.pixi.feature.doc.dependencies]
jupyter-book = ">=1.0.2"
make = ">=0.1"
